--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
@@ -21,6 +20,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.2"
+        "bootstrap": "^5.3.2",
+        "laravel-react-i18n": "^2.0.4"
     }
 }
