--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@types/react": "^18.2.48",
+        "@types/react-dom": "^18.2.18",
         "bootstrap": "^5.3.2",
-        "laravel-react-i18n": "^2.0.4"
+        "laravel-react-i18n": "^2.0.4",
+        "typescript": "^5.3.3"
     }
 }
