--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/react-dom": "^18.2.18",
         "bootstrap": "^5.3.2",
         "laravel-react-i18n": "^2.0.4",
+        "react-bootstrap": "^2.10.0",
         "react-select": "^5.8.0",
         "typescript": "^5.3.3"
     }
