--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "laravel-react-i18n": "^2.0.4",
         "react-bootstrap": "^2.10.0",
         "react-select": "^5.8.0",
+        "styled-components": "^6.1.8",
         "typescript": "^5.3.3"
     }
 }
