--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
         "bootstrap": "^5.3.2",
+        "html-react-parser": "^5.1.10",
         "laravel-react-i18n": "^2.0.4",
         "react-bootstrap": "^2.10.0",
         "react-select": "^5.8.0",
