Update JobsController and related components
Updated JobsController to add job activation functionality. Controller methods were also refactored for improved clarity and readability. Some minor changes were applied to the Jobs component to enhance user experience and data presentation, including a helper for formatting text strings and handling of job posting dates. A dependency (@types/luxon) was also added.

--- a/Homestead.example.yaml
+++ b/Homestead.example.yaml
@@ -7,14 +7,14 @@ keys:
     - ~/.ssh/id_ed25519
 folders:
     -
-        map: ~/Projects/jobhuntr
+        map: ~/Projects/JobHuntr
         to: /home/vagrant/jobhuntr
 sites:
     -
         map: jobhuntr.test
         to: /home/vagrant/jobhuntr/public
 databases:
-    - remoter_dev
+    - jobhuntr_dev
 features:
     -
         mariadb: false
