Refactor "jobs" controller and update navigation UI
Updated the method name in JobsController from "getNewJobPage" to "getJobCreationPage" and replaced its return type from Inertia to Response. Furthermore, added icons to the navigation links in "BusinessHeader.tsx" for a more intuitive user interface. Also, new dependency "luxon" has been added to the package.json.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.3.2",
         "html-react-parser": "^5.1.10",
         "laravel-react-i18n": "^2.0.4",
+        "luxon": "^3.4.4",
         "react-bootstrap": "^2.10.0",
         "react-select": "^5.8.0",
         "styled-components": "^6.1.8",
