Update job references to CompanyJob and switch to PostgreSQL
The term "Job" was replaced with "CompanyJob" throughout the codebase to better reflect its usage. This included renaming database tables, refactoring models, updating variables and keys, and changing UI strings. In addition, the database connection configuration was changed from MySQL to PostgreSQL.

--- a/Homestead.example.yaml
+++ b/Homestead.example.yaml
@@ -19,18 +19,15 @@ features:
     -
         mariadb: false
     -
-        postgresql: false
+        postgresql: true
     -
         ohmyzsh: false
     -
         webdriver: false
-services:
-    -
-        enabled: [mysql]
 
 ports:
-  - send: 33060
-    to: 3306
+  - send: 54320
+    to: 5432
 
 name: jobhuntr
 hostname: jobhuntr
