--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
+        "matanyadaev/laravel-eloquent-spatial": "^4.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
