--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@tiptap/extension-text-align": "^2.4.0",
+        "@tiptap/pm": "^2.4.0",
+        "@tiptap/react": "^2.4.0",
+        "@tiptap/starter-kit": "^2.4.0",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
         "bootstrap": "^5.3.2",
