Update job form fields and integrate new TipTap features
Refactored job form to include detailed sections for expectations, benefits, and assignments. Added support for salary range and hourly rate payment methods. Integrated new TipTap extensions to enhance text input functionality.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@tiptap/extension-character-count": "^2.8.0",
+        "@tiptap/extension-placeholder": "^2.8.0",
         "@tiptap/extension-text-align": "^2.4.0",
         "@tiptap/pm": "^2.4.0",
         "@tiptap/react": "^2.4.0",
