--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_MAPS_API=""
+GOOGLE_API_KEY=""
 JOBHUNTR_PASS=""
 POSTMARK_TOKEN=""
