--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.70.0",
-        "vite": "^5.0.0"
+        "sass": "^1.70.0"
     },
     "dependencies": {
         "@googlemaps/js-api-loader": "^1.16.8",
@@ -38,6 +36,8 @@
         "react-bootstrap": "^2.10.0",
         "react-select": "^5.8.0",
         "styled-components": "^6.1.8",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vite": "^5.0.0",
+        "laravel-vite-plugin": "^1.0.0"
     }
 }
