--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
         "bootstrap": "^5.3.2",
         "html-react-parser": "^5.1.10",
         "laravel-react-i18n": "^2.0.4",
+        "laravel-vite-plugin": "^1.0.0",
         "luxon": "^3.4.4",
         "react-bootstrap": "^2.10.0",
+        "react-canvas-confetti": "^2.0.7",
         "react-select": "^5.8.0",
         "styled-components": "^6.1.8",
         "typescript": "^5.3.3",
-        "vite": "^5.0.0",
-        "laravel-vite-plugin": "^1.0.0"
+        "vite": "^5.0.0"
     }
 }
