--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "luxon": "^3.4.4",
         "react-bootstrap": "^2.10.0",
         "react-canvas-confetti": "^2.0.7",
+        "react-datepicker": "^8.1.0",
         "react-select": "^5.8.0",
         "styled-components": "^6.1.8",
         "typescript": "^5.3.3",
