--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "matanyadaev/laravel-eloquent-spatial": "^4.2",
+        "spatie/laravel-sitemap": "^7.3",
         "symfony/http-client": "^7.1",
         "symfony/postmark-mailer": "^7.1",
         "tightenco/ziggy": "^1.0"
