--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
@@ -34,7 +34,7 @@
         "laravel-react-i18n": "^2.0.4",
         "laravel-vite-plugin": "^1.0.0",
         "luxon": "^3.4.4",
-        "react-bootstrap": "^2.10.0",
+        "nodejs": "^0.0.0",        "react-bootstrap": "^2.10.0",
         "react-canvas-confetti": "^2.0.7",
         "react-datepicker": "^8.1.0",
         "react-select": "^5.8.0",
