--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "laravel-react-i18n": "^2.0.4",
         "laravel-vite-plugin": "^1.0.0",
         "luxon": "^3.4.4",
-        "nodejs": "^0.0.0",        "react-bootstrap": "^2.10.0",
+        "nodejs": "^0.0.0",
+        "react-bootstrap": "^2.10.0",
         "react-canvas-confetti": "^2.0.7",
         "react-datepicker": "^8.1.0",
         "react-select": "^5.8.0",
