--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-select": "^5.8.0",
         "styled-components": "^6.1.8",
         "typescript": "^5.3.3",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "ziggy-js": "^2.5.1"
     }
 }
